   Creative Commons, 559 Nathan Abbott Way, Stanford, California 94305,
   USA.  A summary of the license and the full legal text is included
   in file: COPYING.  If you wish to distribute some or all of this work
   under different terms, please contact respective author(s).
   The license applies to all entries newer than 2009-04-28.
*/

2014-08-09 22:20 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r332)
  * hbqt/hbmk2_qt.hb
  * hbqt/qtsensors/hbqtsensors.hbp
  * hbqt/qtsensors/hbqtsensors.hbx
  * hbqt/qtsensors/qth/filelist.hbm
  + hbqt/qtsensors/qth/QSensorBackend.qth
  + hbqt/qtsensors/qth/QSensorBackendFactory.qth
  + hbqt/qtsensors/qth/QSensorChangesInterface.qth
  + hbqt/qtsensors/qth/QSensorGesture.qth
  + hbqt/qtsensors/qth/QSensorGestureManager.qth
  + hbqt/qtsensors/qth/QSensorGesturePluginInterface.qth
  + hbqt/qtsensors/qth/QSensorGestureRecognizer.qth
  + hbqt/qtsensors/qth/QSensorManager.qth
  + hbqt/qtsensors/qth/QSensorPluginInterface.qth
    + Addded remaining classes from QtSensors module. The suit is complete now.

2014-08-08 18:42 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r331)
  + hbqt/hbqtsensors.hbc
    + Missing entry in previous commit.

  * qtcontribs.hbp
    + Added QtSensors module to compile hbqtsensors library.

2014-08-08 17:57 UTC-0800 Pritpal Bedi (bedipritpal at hotmail.com)(r330)
  * hbqt/hbmk2_qt.hb
    + Added new QObject derived classes.

  * hbqt/qtgui/hbqt_init.cpp
    + Added one more signal.

  * hbqt/qtgui/hbqtgui.ch
    + Added constants related to QtSensors module.

  * hbqt/qtgui/qth/QGridLayout.qth
  * hbqt/qtgui/qth/QScroller.qth
  * hbqt/qtgui/qth/QSpacerItem.qth
    + Added left-out public function members.

  + hbqt/qtsensors
  + hbqt/qtsensors/doc
  + hbqt/qtsensors/doc/en
  + hbqt/qtsensors/hbqt_init.cpp
  + hbqt/qtsensors/hbqtsensors.ch
  + hbqt/qtsensors/hbqtsensors.hbc
  + hbqt/qtsensors/hbqtsensors.hbm
  + hbqt/qtsensors/hbqtsensors.hbp
  + hbqt/qtsensors/hbqtsensors.hbx